fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    overflow-y: scroll;
+}
 body{
     width: 99%;
     background-color: #1F1F1F;
@@ -65,8 +68,6 @@ h1, p{
     text-align: center;
     vertical-align: center;
 }
-
-
 
 .repo-card a{
     color:#fff;
